add seeding round tie-breaker report, adjust the round robin report to match

--- a/templates/report.html
+++ b/templates/report.html
@@ -10,6 +10,12 @@
      .loser {
        color: #D70000;
      }
+     .no_table {
+       margin-top: 1.0rem;
+       display: block;
+       font-size: 1.125rem;
+       font-style: italic;
+     }
      .division {
        margin-top: 1.0rem;
        margin-bottom: 0.5rem;
@@ -18,7 +24,7 @@
      }
      .cohort {
        padding-left: 1.5rem;
-       margin-top: 0.5rem;
+       margin-top: 0.75rem;
        margin-bottom: 0.5rem;
        display: flex;
        flex-direction: column;
@@ -29,12 +35,14 @@
      .cohort > p > span {
        font-weight: bold;
      }
-     .team {
+     .team,
+     .player {
        padding-left: 1.5rem;
        margin-top: 0.75rem;
        margin-bottom: 0.5rem;
      }
-     .team > p > span {
+     .team > p > span,
+     .player > p > span {
        margin-right: 1.0rem;
        font-weight: bold;
      }
@@ -50,9 +58,13 @@
      }
      h3 {
        font-size: 1.5rem;
-       margin-block-start: 0.5rem;
+       margin-block-start: 0.75rem;
        margin-block-end: 0.5rem;
        display: inline-block;
+     }
+     .h3_info {
+       font-size: 1.25rem;
+       font-weight: normal;
      }
      h4 {
        font-size: 1.25rem;
@@ -81,18 +93,96 @@
 
   <body>
     <h1>{{tourn.name}} &ndash; {{title}}</h1>
-    {% for div, cohorts in div_reports.items() %}
+
+    {% if report_num == 0 %}
+    <article class="seeding">
+      <h2>All Players</h2>
+      {% for pos, cohort in pos_rpt.items() %}
+      <article class="cohort">
+        <h3>Position {{pos}}&nbsp;&nbsp;<span class="h3_info">({{pos_info[pos]}})</span></h3>
+        {% for player, games in cohort.items() %}
+        {% if loop.first %}
+        <p>{{len(cohort)}} players: {{', '.join(pos_plyrs[pos])}}</p>
+        {% endif %}
+        <article class="player">
+          <h4>{{player.nick_name}} ({{player.player_num}})</h4>
+          <p>
+            TB Rank: <span>{{player.player_rank}}</span>
+            Win-Loss: <span>{{player.tb_data['wins']}}-{{player.tb_data['losses']}}</span>
+            PF-PA: <span>{{player.tb_data['pts_for']}}-{{player.tb_data['pts_against']}}</span>
+            Pts Pct (total): <span>{{round(player.seed_pts_pct, 2)}}%</span>
+          </p>
+          {% if len(games) > 0 %}
+          <table>
+            <thead>
+              <tr>
+                {% if report_by == "team" %}
+                <th>Round</th>
+                <th>Team</th>
+                <th>Opponent</th>
+                <th>Team Pts</th>
+                <th>Opp Pts</th>
+                {% elif report_by == "winner" %}
+                <th>Round</th>
+                <th>Winner</th>
+                <th>Loser</th>
+                <th>Winner Pts</th>
+                <th>Loser Pts</th>
+                {% else %}
+                <th>Round</th>
+                <th>Player 1</th>
+                <th>Player 2</th>
+                <th>Player 1 Pts</th>
+                <th>Player 2 Pts</th>
+                {% endif %}
+              </tr>
+            </thead>
+            <tbody>
+              {% for game in games %}
+              <tr class="{{'winner' if game.is_winner(player) else 'loser'}}">
+                {% if report_by == 'team' %}
+                <td>{{game.round_num}}</td>
+                <td>{{game.team_info(player)[0]}}</td>
+                <td>{{game.opp_info(player)[0]}}</td>
+                <td>{{game.team_info(player)[1]}}</td>
+                <td>{{game.opp_info(player)[1]}}</td>
+                {% elif report_by == 'winner' %}
+                <td>{{game.round_num}}</td>
+                <td>{{game.winner_info[0]}}</td>
+                <td>{{game.loser_info[0]}}</td>
+                <td>{{game.winner_info[2]}}</td>
+                <td>{{game.loser_info[2]}}</td>
+                {% else %}
+                <td>{{game.round_num}}</td>
+                <td>{{game.team1_name}}</td>
+                <td>{{game.team2_name}}</td>
+                <td>{{game.team1_pts}}</td>
+                <td>{{game.team2_pts}}</td>
+                {% endif %}
+              </tr>
+              {% endfor %}  {# game #}
+            </tbody>
+          </table>
+          {% else %}
+          <p class="no_table">No head-to-head games played</p>
+          {% endif %}
+        </article>
+        {% endfor %}  {# player #}
+      </article>
+      {% endfor %}  {# pos #}
+    </article>
+    {% endif %}  {# report_num == 0 #}
+
+    {% if report_num == 1 %}
+    {% for div, cohorts in div_rpt.items() %}
     <article class="division">
       <h2>Division {{div}}</h2>
       {% for pos, cohort in cohorts.items() %}
       <article class="cohort">
-        <h3>Position {{pos}}</h3>
+        <h3>Position {{pos}}&nbsp;&nbsp;<span class="h3_info">({{div_info[div][pos]}})</span></h3>
         {% for team, games in cohort.items() %}
         {% if loop.first %}
-        <p>
-          ({{len(cohort)}} teams tied with Total Win Percent:
-          <span>{{round(team.tourn_win_pct, 2)}}%</span>)
-        </p>
+        <p>{{len(cohort)}} teams: {{'; '.join(div_cohort[div][pos])}}</p>
         {% endif %}
         <article class="team">
           <h4>{{team.team_name}} ({{team.div_seed}})</h4>
@@ -155,8 +245,9 @@
         </article>
         {% endfor %}  {# team #}
       </article>
-      {% endfor %}  {# cohort #}
+      {% endfor %}  {# pos #}
     </article>
-    {% endfor %}  {# division #}
+    {% endfor %}  {# div #}
+    {% endif %}  {# report_num == 1 #}
   </body>
 </html>
